# reactpy-langgraph-boilerplate

./: .gitignore  .windsurfrules  LICENSE  Makefile  README.md  app.old.py  pyproject.toml  requirements.txt  teste.ipynb
.old/: atomic.py
src/: agent.py  app.py
src/api/: client.py
src/components/: category.py  chat.py  statistics.py
src/frontend/api/: client.py
src/frontend/components/: category.py  chat.py  statistics.py
src/hooks/: use_chat.py  use_habits.py
src/static/css/: base.css  category.css  chat.css  statistics.css
src/styles/: base.py  category.py  chat.py  statistics.py
src/utils/: css_loader.py
