[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "flask>=3.1.0",
    "reactpy[fastapi]>=1.1.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "langgraph>=0.2.59",
    "loguru>=0.7.3",
    "reactpy-apexcharts>=0.0.12",
    "reactpy-router>=1.0.3",
]
requires-python = ">=3.11"

[tool.uv]
venv = ".venv"
